# riscarlet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
doc/: wishbone.md
nix/: sv2v.nix
rtl/: riscarlet.sv
rtl/bus/: bus.sv  bus_bram.sv  bus_req_c.sv  bus_rsp_c.sv
rtl/common/: types.sv
rtl/modules/: rscl_alu.sv  rscl_branch.sv  rscl_bus.sv  rscl_core.sv  rscl_exec.sv  rscl_fetch.sv  rscl_instr.sv  rscl_rf.sv  rscl_top.sv  rscl_types.sv
rtl/prim/: multiply.sv  multiply_signed.sv  single_bram.sv
rtl/riscv/: pipe_slice.sv  pipeline.sv  regport.sv  riscarlet.sv  riscv_alu.sv  stage_fetch.sv  types.sv
rtl/top/: multiply.sv  riscarlet.sv
rtl/wishbone/: wb_bram.sv  wb_flush.sv  wishbone.sv
sim/: multiply.cpp  riscarlet.cpp
